--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -1,4 +1,6 @@
-<div class="bar-container" [ngClass]="getBarConatinerStyle()">
-    <span class="bar-name">{{name}}</span>
+<div class="bar-container">
+<div class="bar-container" [ngClass]="getBarConatinerStyle()"></div>
+<span class="bar-name">{{name}}</span>
 </div>
+
   
