variable names changed to cammel case, removed AutoViewInIt interface

--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -1,4 +1,4 @@
-<div [ngStyle]="{'width':container_width, 'border':'2px solid black'}">
-<div [ngStyle]="{'width': bar_width, 'height': '10px', 'border-radius': '20px', 'background-color': '#70fab5','margin-left':'auto','margin-right':'auto'}"></div>
+<div [ngStyle]="{'width':containerWidth, 'border':'2px solid black'}">
+<div [ngStyle]="{'width': barWidth, 'height': '10px', 'border-radius': '20px', 'background-color': '#70fab5','margin-left':'auto','margin-right':'auto'}"></div>
 <span class="bar-name" style="text-align: center;">{{name}}</span>
 </div>
