Baasic day based view created with date picker

--- a/src/app/timeline/timeline.component.css
+++ b/src/app/timeline/timeline.component.css
@@ -1,11 +1,3 @@
-.button {
-    margin: 1px;
-    padding: 5px;
-}
-
-.month-button {
-    margin: 5px;
-    padding: 5px;
-    padding-left: 20px;
-    padding-right: 20px;
+input {
+    padding: 10px;
 }
