--- a/src/app/days-view/days-view.component.html
+++ b/src/app/days-view/days-view.component.html
@@ -8,7 +8,7 @@
     </tr>
     <tr>
         <td>
-            <div>
+            <div class="categoryName">
                 category name
             </div>
         </td>
@@ -16,7 +16,15 @@
     </tr>
     <tr>
         <td>
-            <div>
+            <div class="categoryName">
+                category namek hlkuaaauuuuu uuuu uuuuuuaygdglag
+            </div>
+        </td>
+        <td [attr.colspan]="numberOfDays">ok</td>
+    </tr>
+    <tr>
+        <td>
+            <div class="categoryName">
                 category name
             </div>
         </td>
@@ -24,7 +32,7 @@
     </tr>
     <tr>
         <td>
-            <div>
+            <div class="categoryName">
                 category name
             </div>
         </td>
@@ -32,15 +40,7 @@
     </tr>
     <tr>
         <td>
-            <div>
-                category name
-            </div>
-        </td>
-        <td [attr.colspan]="numberOfDays">ok</td>
-    </tr>
-    <tr>
-        <td>
-            <div>
+            <div class="categoryName">
                 category name
             </div>
         </td>
