--- a/src/app/timeline/timeline.component.html
+++ b/src/app/timeline/timeline.component.html
@@ -1,2 +1,2 @@
-<input type="date" (input)="onDateSelected($event)">
+<input type="date" (input)="onDateSelected($event)" style="margin-left:90%;">
 <app-days-view [_currentMonth]="selectedMonth" [_year]="selectedYear" [_numberOfDays]="numberOfDays"></app-days-view>
