--- a/src/app/days-view/days-view.component.html
+++ b/src/app/days-view/days-view.component.html
@@ -6,16 +6,16 @@
         <th [attr.colspan]='numberOfDays'>{{currentMonth}} {{year}}</th>
       </tr>
       <tr>
-        <th *ngFor="let date of counter(numberOfDays);let i = index">{{date}}</th>
+        <th *ngFor="let date of counter(numberOfDays);let i = index"><div class="date-text">{{date}}</div></th>
       </tr>
     </thead>
     <tbody>
       <tr class="category-row">
         <td class="category-name">Category Name 1</td>
-        <td [attr.colspan]='numberOfDays'>OK</td>
+        <td [attr.colspan]='numberOfDays'><div style="width:50px;background-color: blueviolet;">OK</div></td>
       </tr>
       <tr class="category-row">
-        <td class="category-name">Category Name 2</td>
+        <td class="category-name">Category Name 2lhkskbfkavsjhdfjh kjbd uasdaisf iugsiuoai iuahofuha</td>
         <td [attr.colspan]='numberOfDays'>OK</td>
       </tr>
       <tr class="category-row">
