eventcontainer finds out right position for events

--- a/src/app/days-view/days-view.component.html
+++ b/src/app/days-view/days-view.component.html
@@ -19,7 +19,7 @@
       </tr>
       <tr class="category-row">
         <td class="category-name">Category Name 3</td>
-        <td [attr.colspan]='numberOfDays'>OK</td>
+        <td [attr.colspan]='numberOfDays'><app-event-container></app-event-container></td>
       </tr>
       <tr class="category-row">
         <td class="category-name">Category Name 4</td>
