--- a/src/app/event/event.component.css
+++ b/src/app/event/event.component.css
@@ -1,15 +1,17 @@
-.bar-container {
-    display: inline-block;
-    width: 1000px;
-    height: 10px;
-    border-radius: 20px;
-    background-color: #70fab5;
-}
 .bar-name {
-    display: inline-block;
     line-height: 30px;
     color: #333;
     font-size: 18px;
-    font-weight: bold;
     width: 100%;
+    text-align: left;
 }
+.bar-prop{
+    display: flex;
+    height: 10px;
+    border-radius:20px;
+    background-color: purple;
+}
+  
+  
+  
+  
