dynamic colors added

--- a/src/app/days-view/days-view.component.html
+++ b/src/app/days-view/days-view.component.html
@@ -11,11 +11,11 @@
     <tbody>
       <tr class="category-row">
         <td class="category-name">Category Name 1</td>
-        <td [attr.colspan]='numberOfDays'><div style="width:50px;background-color: blueviolet;">OK</div></td>
+        <td [attr.colspan]='numberOfDays'><app-event-container></app-event-container></td>
       </tr>
       <tr class="category-row">
         <td class="category-name">Category Name 2lhkskbfkavsjhdfjh kjbd uasdaisf iugsiuoai iuahofuha</td>
-        <td [attr.colspan]='numberOfDays'>OK</td>
+        <td [attr.colspan]='numberOfDays'><app-event-container></app-event-container></td>
       </tr>
       <tr class="category-row">
         <td class="category-name">Category Name 3</td>
@@ -23,13 +23,12 @@
       </tr>
       <tr class="category-row">
         <td class="category-name">Category Name 4</td>
-        <td [attr.colspan]='numberOfDays'>OK</td>
+        <td [attr.colspan]='numberOfDays'><app-event-container></app-event-container></td>
       </tr>
       <tr class="category-row">
         <td class="category-name">Category Name 5</td>
         <td [attr.colspan]='numberOfDays'>
-          <div>OK</div>
-          <div>What are you going to do?</div>
+          <div><app-event-container></app-event-container></div>
         </td>
       </tr>
     </tbody>
