--- a/src/app/event-container/event-container.component.html
+++ b/src/app/event-container/event-container.component.html
@@ -1,3 +1,3 @@
 <div *ngFor="let orderedEvent of orderedEvents">
-<app-event *ngFor="let event of orderedEvent" [_width]="event[1]" [_marginLeft]="event[0]"></app-event>
+<app-event *ngFor="let event of orderedEvent;let i = index" [_width]="event[1]" [_marginLeft]="event[0]" [_bgcolor]="colors[getRandomInt()]"></app-event>
 </div>
