--- a/src/app/days-view/days-view.component.css
+++ b/src/app/days-view/days-view.component.css
@@ -7,15 +7,17 @@
     padding-top: 10px;
     padding-bottom: 10px;
     border: 1px solid #ccc;
+    border-radius: 5px;
   }
   
   tr {
     margin-top: 10px;
+    background-color: rgb(255, 255, 255, 0.25);
   }
   
   th {
     text-align: center;
-    background-color: #f2f2f2;
+    background-color: rgb(225, 225, 225,0.5);
     border: 1px solid #ccc;
   }
   
@@ -24,6 +26,7 @@
     font-weight: bold;
     width:auto;
     margin: auto;
+    background-color: rgb(225, 225, 225,0.5);
   }
   
   tr + td {
