--- a/src/app/event/event.component.css
+++ b/src/app/event/event.component.css
@@ -1,10 +1,12 @@
 .bar-name {
     line-height: 30px;
-    color: #333;
-    font-size: 18px;
+    color: #000000;
+    font-size: 16px;
+    font-family: Arial, sans-serif;
+    font-weight: bold;
     width: 100%;
     text-align: center;
-    overflow: scroll;
+    overflow: hidden;
 }
 .bar-prop{
     display: flex;
