--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -1,6 +1,6 @@
 <div title="{{line}}" [ngStyle]="{'margin-left': marginLeft,'width':width,'display':'inline-block'}"> 
-    <div *ngIf="isDot" [ngStyle]="{'background-color':bgcolor}" class="dot-prop"></div>
-    <div *ngIf="!isDot" [ngStyle]="{'background-color':bgcolor}" class="bar-prop"></div>
+    <div *ngIf="isDot" [ngStyle]="{'background-color':bgcolor}" class="dot-prop prop"></div>
+    <div *ngIf="!isDot" [ngStyle]="{'background-color':bgcolor}" class="bar-prop prop"></div>
     <div class="bar-name">{{name}}</div>
 </div>
   
