--- a/src/app/timeline/timeline.component.css
+++ b/src/app/timeline/timeline.component.css
@@ -51,4 +51,19 @@ select {
     align-items: center;
     height: 100vh;
  }
+
+ .header {
+  display: flex;
+  justify-content: flex-end;
+  background-color: rgba(236, 230, 230, 0.63);
+  margin-top: auto;
+  border-radius: 20px;
+ }
+ .header1 {
+  display: flex;
+  justify-content: center;
+  background-color: rgba(236, 230, 230, 0.25);
+  margin-top: auto;
+  border-radius: 20px;
+ }
   
